--- a/src/css/style.css
+++ b/src/css/style.css
@@ -103,6 +103,7 @@ html {
   font-size: 16px;
   text-align: center;
   text-transform: uppercase;
+  font-weight: 900;
 }
 
 .landing-page .content-container .project-card-container {
@@ -218,6 +219,7 @@ html {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 15px 15px;
+  background-image: radial-gradient(circle at -80px -120px, #517ade, transparent 62%);
 }
 
 .landing-page .content-container .project-card-container .card-content > * {
@@ -236,6 +238,7 @@ html {
 
 .landing-page .content-container .project-card-container .card-content .card-body {
   color: grey;
+  line-height: 22px;
 }
 
 .noice {
