--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,6 +65,8 @@ html {
   display: grid;
   -ms-grid-rows: auto 1fr;
       grid-template-rows: auto 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   overflow: hidden;
 }
 
@@ -73,6 +75,9 @@ html {
   display: grid;
   -ms-grid-columns: 40% 60%;
       grid-template-columns: 40% 60%;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
 }
 
 .landing-page .content-container .cta-container {
@@ -110,10 +115,10 @@ html {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
-  -ms-grid-columns: 4% 86% 10%;
-      grid-template-columns: 4% 86% 10%;
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 4% 86% 10%;
+      grid-template-columns: 4% 86% 10%;
 }
 
 .landing-page .content-container .project-card-container .project-card {
@@ -149,6 +154,20 @@ html {
 .landing-page .content-container .project-card-container .card {
   height: 100%;
   position: relative;
+  cursor: pointer;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.landing-page .content-container .project-card-container .card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(white), to(transparent));
+  background: linear-gradient(transparent, white, transparent);
+  width: 2px;
+  height: 90%;
 }
 
 .landing-page .content-container .project-card-container .card:nth-child(1) {
@@ -161,6 +180,10 @@ html {
           transform: translateY(-105px);
 }
 
+.landing-page .content-container .project-card-container .card:nth-child(1):hover > .card-content {
+  background-image: radial-gradient(circle at -80px -120px, #517ade, transparent 80%);
+}
+
 .landing-page .content-container .project-card-container .card:nth-child(2) {
   -webkit-transform: translateY(-30px);
           transform: translateY(-30px);
@@ -168,8 +191,12 @@ html {
 
 .landing-page .content-container .project-card-container .card:nth-child(2)::before {
   height: 90%;
-  -webkit-transform: translateY(-38px);
-          transform: translateY(-38px);
+  -webkit-transform: translateY(-68px);
+          transform: translateY(-68px);
+}
+
+.landing-page .content-container .project-card-container .card:nth-child(2):hover > .card-content {
+  background-image: radial-gradient(circle at -80px -120px, #517ade, transparent 80%);
 }
 
 .landing-page .content-container .project-card-container .card:nth-child(3) {
@@ -195,15 +222,8 @@ html {
   height: 120%;
 }
 
-.landing-page .content-container .project-card-container .card::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(white), to(transparent));
-  background: linear-gradient(transparent, white, transparent);
-  width: 2px;
-  height: 90%;
+.landing-page .content-container .project-card-container .card:nth-child(3):hover > .card-content {
+  background-image: radial-gradient(circle at -80px -120px, #517ade, transparent 80%);
 }
 
 .landing-page .content-container .project-card-container .card-content {
@@ -241,6 +261,116 @@ html {
   line-height: 22px;
 }
 
+.contact-page {
+  background: black;
+  width: 100%;
+  height: 100%;
+  color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  overflow: hidden;
+}
+
+.project-page {
+  background: black;
+  width: 100%;
+  height: 100%;
+  color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  overflow: hidden;
+  position: fixed;
+  overscroll-behavior-y: contain;
+}
+
+.project-page .container {
+  background: lightblue;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.project-page .deck {
+  position: absolute;
+  width: 800px;
+  height: 500px;
+  will-change: transform;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-touch-action: none;
+      touch-action: none;
+}
+
+.project-page .deck > div {
+  background-color: white;
+  background-size: auto 85%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 45vh;
+  max-width: 300px;
+  height: 95vh;
+  max-height: 585px;
+  will-change: transform;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 17px 30px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+          box-shadow: 0 17px 30px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+}
+
+.test {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  scrollbar-width: 0px;
+  position: relative;
+  bottom: 30px;
+}
+
+.about-page {
+  background: black;
+  width: 100%;
+  height: 100%;
+  color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  overflow: hidden;
+}
+
 .noice {
   width: 100vw;
   height: 100vh;
@@ -252,6 +382,10 @@ html {
   width: 100vw;
   height: 100vh;
   font-family: 'Lato', sans-serif;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 a {
