--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,9 @@
 @import 'variables';
 @import 'header';
 @import 'landingPage';
+@import 'contactPage';
+@import 'projectPage';
+@import 'aboutPage';
 
 .noice {
   width: 100vw;
@@ -16,6 +19,7 @@
   width: 100vw;
   height: 100vh;
   font-family: 'Lato', sans-serif;
+  user-select: none;
 }
 
 a {
