--- a/src/css/style.css
+++ b/src/css/style.css
@@ -289,6 +289,10 @@ html {
   overflow: hidden;
   position: fixed;
   overscroll-behavior-y: contain;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .project-page .container {
@@ -308,7 +312,7 @@ html {
 
 .project-page .deck {
   position: absolute;
-  width: 800px;
+  width: 500px;
   height: 500px;
   will-change: transform;
   display: -webkit-box;
@@ -322,13 +326,16 @@ html {
           justify-content: center;
   -ms-touch-action: none;
       touch-action: none;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  margin-bottom: 50px;
 }
 
-.project-page .deck > div {
+.project-page .deck > .cards {
   background-color: white;
-  background-size: auto 85%;
+  color: black;
+  background-size: 170% 100%;
   background-repeat: no-repeat;
-  background-position: center center;
   width: 45vh;
   max-width: 300px;
   height: 95vh;
@@ -337,24 +344,24 @@ html {
   border-radius: 10px;
   -webkit-box-shadow: 0 17px 30px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
           box-shadow: 0 17px 30px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
-}
-
-.test {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.project-page .deck > .cards > img {
   height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  overflow: hidden;
-  scrollbar-width: 0px;
-  position: relative;
-  bottom: 30px;
+  width: 100%;
+}
+
+.project-page .deck > .cards .card-btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .about-page {
