--- a/src/sass/_projectPage.scss
+++ b/src/sass/_projectPage.scss
@@ -9,6 +9,7 @@
   overflow: hidden;
   position: fixed;
   overscroll-behavior-y: contain;
+  user-select: none;
 
   .container {
     background: lightblue;
@@ -20,20 +21,23 @@
   }
   .deck {
     position: absolute;
-    width: 800px;
+    width: 500px;
     height: 500px;
     will-change: transform;
     display: flex;
     align-items: center;
     justify-content: center;
     touch-action: none;
+    transform: translateY(50px);
+    margin-bottom: 50px;
   }
 
-  .deck > div {
+  .deck > .cards {
     background-color: white;
-    background-size: auto 85%;
+    color: black;
+    background-size: 170% 100%;
     background-repeat: no-repeat;
-    background-position: center center;
+    // background-position: center center;
     width: 45vh;
     max-width: 300px;
     height: 95vh;
@@ -41,17 +45,15 @@
     will-change: transform;
     border-radius: 10px;
     box-shadow: 0 17px 30px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+    display: flex;
+    flex-direction: column;
+    & > img {
+      // flex: 1;
+      height: 100%;
+      width: 100%;
+    }
+    .card-btn-container {
+      display: flex;
+    }
   }
-}
-
-.test {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  scrollbar-width: 0px;
-  position: relative;
-  bottom: 30px;
 }
