--- a/src/sass/_projectPage.scss
+++ b/src/sass/_projectPage.scss
@@ -34,21 +34,53 @@
   .deck > .cards {
     background-color: white;
     color: black;
-    // background-size: 100% 100%;
-    background-size: auto 85%;
-    background-repeat: no-repeat;
-    background-position: top center;
     width: 45vh;
     max-width: 300px;
     height: 95vh;
     max-height: 585px;
     will-change: transform;
     border-radius: 10px;
-    box-shadow: 0 17px 30px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
-    display: flex;
-    flex-direction: column;
+    box-shadow: 0 17px 15px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 70% 20% 10%;
+    text-align: center;
+    .card-image-container {
+      grid-row: 1/2;
+      background-size: 100% 100%;
+    }
+    .card-body-container {
+      grid-row: 2/3;
+      padding: 10px 12px 0;
+      h2 {
+        text-transform: uppercase;
+        margin-bottom: 5px;
+        color: $primary-color;
+      }
+      p {
+        text-align: start;
+        color: grey;
+        text-transform: capitalize;
+      }
+    }
+
     .card-btn-container {
       display: flex;
+      grid-row: 3/4;
+      & > * {
+        flex: 1;
+        border: 0.25px solid white;
+        outline: 0;
+        background-color: $primary-color;
+        background-color: black;
+        color: white;
+        text-transform: uppercase;
+        font-weight: 900;
+        &:hover {
+          color: $primary-color;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
