--- a/src/sass/_contactPage.scss
+++ b/src/sass/_contactPage.scss
@@ -15,7 +15,9 @@
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
     height: 100%;
+    width: 100%;
   }
+
   //
   //contact-form 3d image section
   //
@@ -78,19 +80,74 @@
   //
   .form-container {
     text-align: center;
+    .form {
+      width: 70%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      h2 {
+        font-size: 16px;
+        text-transform: capitalize;
+        color: white;
+        text-align: start;
+        position: absolute;
+        bottom: 30px;
+        right: 30px;
+        cursor: default;
+      }
+      & > * {
+        margin-bottom: 10px;
+        text-transform: capitalize;
+      }
+    }
+    .textArea {
+      resize: none;
+      font-size: 15px;
+      line-height: 1.5;
+      display: block;
+      padding: 0 10px 0 20px;
+      font-family: 'Lato', sans-serif;
+      padding: 0 10px 0 15px;
+      border: none;
+      background-color: black;
+      border-bottom: 1px solid white;
+      outline: none;
+      color: white;
+    }
     input {
       font-size: 15px;
       line-height: 1.5;
-      color: #666;
       display: block;
-      width: 50%;
-      background: #e6e6e6;
       height: 50px;
-      border-radius: 25px;
-      padding: 0 30px 0 68px;
-    }
-    button{
+      padding: 0 10px 0 15px;
+      border: none;
+      outline: none;
+      background-color: black;
+      border-bottom: 1px solid white;
       color: white;
+    }
+    ::placeholder {
+      color: grey;
+      opacity: 1;
+    }
+    button {
+      margin-top: 10px;
+      border: none;
+      outline: none;
+      height: 50px;
+      border-radius: 999px;
+      width: 40%;
+      font-size: 16px;
+      font-weight: 900;
+      cursor: pointer;
+      &:hover {
+        color: $primary-color;
+      }
+    }
+    .error {
+      color: crimson;
+      text-align: start;
     }
   }
 }
