--- a/src/sass/_contactPage.scss
+++ b/src/sass/_contactPage.scss
@@ -98,7 +98,6 @@
       }
       & > * {
         margin-bottom: 10px;
-        text-transform: capitalize;
       }
     }
     .textArea {
@@ -106,6 +105,7 @@
       font-size: 15px;
       line-height: 1.5;
       display: block;
+      height: 150px;
       padding: 0 10px 0 20px;
       font-family: 'Lato', sans-serif;
       padding: 0 10px 0 15px;
