--- a/src/sass/_landingPage.scss
+++ b/src/sass/_landingPage.scss
@@ -33,6 +33,9 @@
         text-align: center;
         text-transform: uppercase;
         font-weight: 900;
+        &:hover {
+          color: black;
+        }
       }
     }
 
