--- a/src/sass/_contactPage.scss
+++ b/src/sass/_contactPage.scss
@@ -29,10 +29,13 @@
     height: 100%;
     // border: 1px solid red;
     padding-top: 100px;
+    position: relative;
+    right: 50px;
+    // padding-right: 100px;
   }
   .img {
-    width: 80%;
-    height: 40%;
+    width: 34.5vw;
+    height: 21vh;
   }
 
   // form-icons
