--- a/src/sass/_aboutPage.scss
+++ b/src/sass/_aboutPage.scss
@@ -17,10 +17,10 @@
       padding-right: 100px;
       text-align: start;
     }
-    & > div:nth-child(1){
+    & > div:nth-child(1) {
       padding-left: 100px;
     }
-    & > div:nth-child(3){
+    & > div:nth-child(3) {
       padding-left: 100px;
     }
     h2 {
@@ -51,5 +51,29 @@
   .about-project {
     grid-row: 4/5;
     grid-column: 2/3;
+  }
+  .github {
+    border-bottom: 2px solid rebeccapurple;
+    margin-left: 8px;
+    letter-spacing: 1px;
+    transition: all 0.2s;
+    &:hover {
+      border-bottom: 3px solid rebeccapurple;
+    }
+  }
+
+  .projects {
+    margin-left: 5px;
+    border-bottom: 1px solid greenyellow;
+    letter-spacing: 1px;
+    transition: all 0.2s;
+    &:hover {
+      border-bottom: 2px solid greenyellow;
+      cursor: pointer;
+    }
+  }
+  .about-icons {
+    width: 15px;
+    height: 15px;
   }
 }
