--- a/src/sass/_contactPage.scss
+++ b/src/sass/_contactPage.scss
@@ -98,6 +98,7 @@
         bottom: 30px;
         right: 30px;
         cursor: default;
+        border-bottom: 1px solid white;
       }
       & > * {
         margin-bottom: 10px;
