--- a/src/sass/_aboutPage.scss
+++ b/src/sass/_aboutPage.scss
@@ -7,73 +7,121 @@
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr;
   overflow: hidden;
-  .about-story-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    height: 100%;
-    padding-top: 50px;
-    & > * {
-      padding-right: 100px;
-      text-align: start;
+
+  // 1st part story
+  .about-story-container {
+    .about-story-wrapper {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(4, 1fr);
+      height: 100%;
+      padding-top: 50px;
+      & > * {
+        padding-right: 100px;
+        text-align: start;
+      }
+      & > div:nth-child(1) {
+        padding-left: 100px;
+      }
+      & > div:nth-child(3) {
+        padding-left: 100px;
+      }
+      h2 {
+        text-transform: uppercase;
+        font-size: 32px;
+        margin-bottom: 10px;
+        color: $primary-color;
+      }
+      p {
+        font-size: 22px;
+        color: grey;
+        line-height: 31px;
+        word-spacing: 1px;
+      }
     }
-    & > div:nth-child(1) {
-      padding-left: 100px;
+    .about-who {
+      grid-row: 1/2;
+      grid-column: 1/2;
     }
-    & > div:nth-child(3) {
-      padding-left: 100px;
+    .about-what {
+      grid-row: 2/3;
+      grid-column: 2/3;
     }
-    h2 {
-      text-transform: uppercase;
-      font-size: 32px;
-      margin-bottom: 10px;
-      color: $primary-color;
+    .about-why {
+      grid-row: 3/4;
+      grid-column: 1/2;
     }
-    p {
-      font-size: 22px;
-      color: grey;
-      line-height: 31px;
-      word-spacing: 1px;
+    .about-project {
+      grid-row: 4/5;
+      grid-column: 2/3;
     }
-  }
-  .about-who {
-    grid-row: 1/2;
-    grid-column: 1/2;
-  }
-  .about-what {
-    grid-row: 2/3;
-    grid-column: 2/3;
-  }
-  .about-why {
-    grid-row: 3/4;
-    grid-column: 1/2;
-  }
-  .about-project {
-    grid-row: 4/5;
-    grid-column: 2/3;
-  }
-  .github {
-    border-bottom: 2px solid rebeccapurple;
-    margin-left: 8px;
-    letter-spacing: 1px;
-    transition: all 0.2s;
-    &:hover {
-      border-bottom: 3px solid rebeccapurple;
+    .github {
+      border-bottom: 2px solid rebeccapurple;
+      margin-left: 8px;
+      letter-spacing: 1px;
+      transition: all 0.2s;
+      color: white;
+      &:hover {
+        color: rebeccapurple;
+      }
+    }
+
+    .projects {
+      margin-left: 5px;
+      border-bottom: 1px solid greenyellow;
+      letter-spacing: 1px;
+      transition: all 0.2s;
+      color: white;
+      &:hover {
+        cursor: pointer;
+        color: greenyellow;
+      }
+    }
+    .about-icons {
+      width: 15px;
+      height: 15px;
     }
   }
 
-  .projects {
-    margin-left: 5px;
-    border-bottom: 1px solid greenyellow;
-    letter-spacing: 1px;
-    transition: all 0.2s;
-    &:hover {
-      border-bottom: 2px solid greenyellow;
-      cursor: pointer;
+  // 2nd part about-project-container
+  .about-project-container {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, 400px);
+    gap: 30px;
+    padding: 50px 120px 0px;
+    overflow: scroll;
+    align-items: start;
+    .tech-card {
+      display: grid;
+      padding: 20px 20px;
+      width: 100%;
+      height: 300px;
+      border-radius: 7px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 20% 15% 65%;
+      background-color: white;
+      color: black;
+      img {
+        grid-row: 1/2;
+        width: 100%;
+        height: 100%;
+      }
+      .title {
+        grid-row: 2/3;
+        text-align: center;
+        margin-top: 15px;
+        font-size: 20px;
+        text-transform: uppercase;
+        font-weight: 900;
+      }
+      .content {
+        grid-row: 3/4;
+        text-transform: capitalize;
+        color: rgb(75, 74, 74);
+        margin-top: 15px;
+        text-align: center;
+      }
     }
-  }
-  .about-icons {
-    width: 15px;
-    height: 15px;
   }
 }
