--- a/src/css/style.css
+++ b/src/css/style.css
@@ -716,8 +716,9 @@ html {
   -ms-grid-columns: (400px)[auto-fit];
       grid-template-columns: repeat(auto-fit, 400px);
   gap: 30px;
-  padding: 50px 120px 0px;
-  overflow: scroll;
+  padding: 50px 120px 50px;
+  overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
@@ -726,23 +727,33 @@ html {
 .about-page .about-project-container .tech-card {
   display: -ms-grid;
   display: grid;
-  padding: 20px 20px;
+  padding: 20px;
   width: 100%;
-  height: 300px;
+  height: 200px;
   border-radius: 7px;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  -ms-grid-columns: 400px;
+      grid-template-columns: 400px;
   -ms-grid-rows: 20% 15% 65%;
       grid-template-rows: 20% 15% 65%;
   background-color: white;
   color: black;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.about-page .about-project-container .tech-card img {
+.about-page .about-project-container .tech-card .img {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.about-page .about-project-container .tech-card .img img {
   height: 100%;
 }
 
@@ -764,7 +775,10 @@ html {
   text-transform: capitalize;
   color: #4b4a4a;
   margin-top: 15px;
+  padding: 13px;
   text-align: center;
+  font-size: 16.5px;
+  line-height: 23px;
 }
 
 .noice {
