--- a/src/sass/_landingPage.scss
+++ b/src/sass/_landingPage.scss
@@ -22,6 +22,7 @@
       padding-top: 160px;
       h1 {
         font-size: 82px;
+        word-spacing: -8px;
       }
       .cta {
         background: $primary-color;
