about page pc responsive

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -717,6 +717,19 @@ html {
   height: 15px;
 }
 
+@media only screen and (max-height: 700px) {
+  .about-page .about-story-container .about-story-wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
+    height: 70%;
+    padding-top: 5px;
+  }
+}
+
 .about-page .about-project-container {
   display: -ms-grid;
   display: grid;
@@ -788,6 +801,28 @@ html {
   text-align: center;
   font-size: 16.5px;
   line-height: 23px;
+}
+
+@media only screen and (max-height: 700px) {
+  .about-page .about-project-container {
+    padding: 50px 65px 50px;
+    -ms-grid-columns: (380px)[auto-fit];
+        grid-template-columns: repeat(auto-fit, 380px);
+  }
+  .about-page .about-project-container .tech-card .content {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-height: 620px) {
+  .about-page .about-project-container {
+    padding: 50px 44px 50px;
+    -ms-grid-columns: (370px)[auto-fit];
+        grid-template-columns: repeat(auto-fit, 370px);
+  }
+  .about-page .about-project-container .tech-card .content {
+    font-size: 15.5px;
+  }
 }
 
 .noice {
